--- a/index.html
+++ b/index.html
@@ -217,8 +217,11 @@
 </ul>
 </li>
 <li><a href="#26-%D0%B0%D0%BB%D0%B3%D0%BE%D1%80%D0%B8%D1%82%D0%BC-aes-%D1%80%D0%B0%D1%83%D0%BD%D0%B4%D0%BE%D0%B2%D1%8B%D0%B5-%D0%BA%D0%BB%D1%8E%D1%87%D0%B8">26. Алгоритм AES. Раундовые ключи.</a></li>
-<li><a href="#27-%D1%85%D1%8D%D1%88-%D1%84%D1%83%D0%BD%D0%BA%D1%86%D0%B8%D0%B8-%D1%81%D0%B2%D0%BE%D0%B9%D1%81%D1%82%D0%B2%D0%B0">27. Хэш функции. Свойства.</a></li>
+<li><a href="#27-%D1%85%D1%8D%D1%88-%D1%84%D1%83%D0%BD%D0%BA%D1%86%D0%B8%D0%B8-%D1%81%D0%B2%D0%BE%D0%B9%D1%81%D1%82%D0%B2%D0%B0">27. Хэш функции. Свойства.</a>
+<ul>
 <li><a href="#%D1%81%D0%B2%D0%BE%D0%B9%D1%81%D1%82%D0%B2%D0%B0-%D1%85%D1%8D%D1%88-%D1%84%D1%83%D0%BD%D0%BA%D1%86%D0%B8%D0%B8">Свойства Хэш функции</a></li>
+</ul>
+</li>
 <li><a href="#28-%D1%85%D1%8D%D1%88-%D1%84%D1%83%D0%BD%D0%BA%D1%86%D0%B8%D0%B8-%D1%81%D1%85%D0%B5%D0%BC%D0%B0-%D0%BC%D0%B5%D1%80%D0%BA%D0%B5%D0%BB%D1%8F-%D0%B4%D0%B0%D0%BC%D0%B3%D0%B0%D1%80%D0%B4%D0%B0">28. Хэш функции. Схема Меркеля-Дамгарда.</a></li>
 <li><a href="#29-%D1%85%D1%8D%D1%88-%D1%84%D1%83%D0%BD%D0%BA%D1%86%D0%B8%D0%B8-%D0%B0%D0%BB%D0%B3%D0%BE%D1%80%D0%B8%D1%82%D0%BC-sha-1-%D0%B4%D0%BE%D0%B1%D0%B0%D0%B2%D0%BB%D0%B5%D0%BD%D0%B8%D0%B5-%D0%BD%D0%B5%D0%B4%D0%BE%D1%81%D1%82%D0%B0%D1%8E%D1%89%D0%B8%D1%85-%D0%B1%D0%B8%D1%82%D0%BE%D0%B2-%D0%B8-%D1%83%D0%BA%D0%B0%D0%B7%D0%B0%D0%BD%D0%B8%D0%B5-%D0%B4%D0%BB%D0%B8%D0%BD%D1%8B-%D0%B8%D0%BD%D0%B8%D1%86%D0%B8%D0%B0%D0%BB%D0%B8%D0%B7%D0%B0%D1%86%D0%B8%D1%8F-%D0%B1%D1%83%D1%84%D0%B5%D1%80%D0%B0">29. Хэш функции. Алгоритм SHA-1. Добавление недостающих битов и указание длины, Инициализация буфера</a>
 <ul>
@@ -1129,7 +1132,7 @@ i &lt; B_1</annotation></semantics></math></span><span class="katex-html" aria-h
 <p>Используются с ЭлектронноЦифровойПодписью для проверки целостности данных. Для тех же целей можно применять контрольные суммы, биты чётности.</p>
 <p>Функция Хэширования - детерминированная функция, получающая на вход биты произвольной длины, выдающая список битов фиксированной длины. Называются по всякому, но в основном Хэш.</p>
 <p><span class="katex"><span class="katex-mathml"><math xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mi>H</mi><mo stretchy="false">(</mo><mi>m</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">H(m)</annotation></semantics></math></span><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:1em;vertical-align:-0.25em;"></span><span class="mord mathnormal" style="margin-right:0.08125em;">H</span><span class="mopen">(</span><span class="mord mathnormal">m</span><span class="mclose">)</span></span></span></span> , где m - сообщение (Прообраз функции, исходная строка). Когда хэши проверяются или оцениваются, применяются</p>
-<h2 id="свойства-хэш-функции">Свойства Хэш функции</h2>
+<h3 id="свойства-хэш-функции">Свойства Хэш функции</h3>
 <ol>
 <li>
 <p>Стойкость к поиску первого прообраза. Нет эффективного полиномиального алгоритма который дал бы вычислить m по хэшу, а значит хэш - односторонняя функция.</p>
