--- a/index.html
+++ b/index.html
@@ -152,9 +152,13 @@
 <li><a href="#touch-memory">Touch Memory</a></li>
 <li><a href="#rfid">RFID</a>
 <ul>
-<li><a href="#%D0%BA%D0%BB%D0%B0%D1%81%D1%81%D0%B8%D1%84%D0%B8%D0%BA%D0%B0%D1%86%D0%B8%D1%8F-rfid-%D0%BC%D0%B5%D1%82%D0%BE%D0%BA">Классификация RFID-меток:</a></li>
-<li><a href="#%D0%BF%D0%BE-%D0%B2%D0%B8%D0%B4%D0%B0%D0%BC-%D0%BF%D0%B0%D0%BC%D1%8F%D1%82%D0%B8">По видам памяти:</a></li>
-<li><a href="#%D0%BF%D0%BE-%D0%B8%D1%81%D0%BF%D0%BE%D0%BB%D0%BD%D0%B5%D0%BD%D0%B8%D1%8E-%D0%BE%D0%BF%D1%80%D0%B5%D0%B4%D0%B5%D0%BB%D1%8F%D0%B5%D1%82%D1%81%D1%8F-%D1%86%D0%B5%D0%BB%D1%8F%D0%BC%D0%B8-%D0%B8-%D1%83%D1%81%D0%BB%D0%BE%D0%B2%D0%B8%D1%8F%D0%BC%D0%B8-%D0%B8%D1%81%D0%BF%D0%BE%D0%BB%D1%8C%D0%B7%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D1%8F-rfid-%D0%BC%D0%B5%D1%82%D0%BE%D0%BA">По исполнению (определяется целями и условиями использования RFID-меток):</a></li>
+<li><a href="#%D0%BA%D0%BB%D0%B0%D1%81%D1%81%D0%B8%D1%84%D0%B8%D0%BA%D0%B0%D1%86%D0%B8%D1%8F-rfid-%D0%BC%D0%B5%D1%82%D0%BE%D0%BA">Классификация RFID-меток</a>
+<ul>
+<li><a href="#%D0%BF%D0%BE-%D1%82%D0%B8%D0%BF%D1%83-%D0%BF%D0%B8%D1%82%D0%B0%D0%BD%D0%B8%D1%8F">По типу питания</a></li>
+<li><a href="#%D0%BF%D0%BE-%D0%B2%D0%B8%D0%B4%D0%B0%D0%BC-%D0%BF%D0%B0%D0%BC%D1%8F%D1%82%D0%B8">По видам памяти</a></li>
+<li><a href="#%D0%BF%D0%BE-%D0%B8%D1%81%D0%BF%D0%BE%D0%BB%D0%BD%D0%B5%D0%BD%D0%B8%D1%8E-%D0%BE%D0%BF%D1%80%D0%B5%D0%B4%D0%B5%D0%BB%D1%8F%D0%B5%D1%82%D1%81%D1%8F-%D1%86%D0%B5%D0%BB%D1%8F%D0%BC%D0%B8-%D0%B8-%D1%83%D1%81%D0%BB%D0%BE%D0%B2%D0%B8%D1%8F%D0%BC%D0%B8-%D0%B8%D1%81%D0%BF%D0%BE%D0%BB%D1%8C%D0%B7%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D1%8F-rfid-%D0%BC%D0%B5%D1%82%D0%BE%D0%BA">По исполнению (определяется целями и условиями использования RFID-меток)</a></li>
+</ul>
+</li>
 </ul>
 </li>
 <li><a href="#nfc">NFC</a></li>
@@ -632,22 +636,22 @@
 Memory в начале 1997 года. Под этим названием электронные ключи Touch Memory выпускаются по сегодняшний день.</p>
 <h3 id="rfid">RFID</h3>
 <p><img src="/images/8/image-2.png" alt="alt text"></p>
-<p><strong>Технология RFID</strong>(Radio Frequency Identification — радиочастотная идентификация) – это технология, основанная на использовании радиочастотного электромагнитного излучения.
+<p><strong>Технология RFID</strong> (Radio Frequency Identification — радиочастотная идентификация) – это технология, основанная на использовании радиочастотного электромагнитного излучения.
 RFID-метка – миниатюрное запоминающее устройство, которое состоит из микрочипа, хранящего информацию, и антенны, с помощью которой метка эти данные передает и получает.
 В памяти RFID-метки хранится ее собственный уникальный номер и пользовательская информация. Когда метка попадает в зону регистрации, эта информация принимается считывателем, специальным прибором, способным читать и записывать информацию в метках.</p>
-<h4 id="классификация-rfid-меток">Классификация RFID-меток:</h4>
-<p>По типу питания:</p>
+<h4 id="классификация-rfid-меток">Классификация RFID-меток</h4>
+<h5 id="по-типу-питания">По типу питания</h5>
 <ul>
 <li>Активные — используют для передачи данных энергию встроенного элемента питания (зона чтения до 100 метров);</li>
 <li>Пассивные — используют энергию, излучаемую считывателем (дальность до 8 метров).</li>
 </ul>
-<h4 id="по-видам-памяти">По видам памяти:</h4>
+<h5 id="по-видам-памяти">По видам памяти</h5>
 <ul>
 <li>&quot;RO&quot; (Read Only) — данные записываются только один раз, сразу при изготовлении. Такие метки пригодны только для идентификации. Никакую новую информацию в них записать нельзя, и их практически невозможно подделать;</li>
 <li>&quot;WORM” (Write Once Read Many) — кроме уникального идентификатора такие метки содержат блок однократно записываемой памяти, которую в дальнейшем можно многократно читать;</li>
 <li>&quot;RW&quot; (Read and Write) — такие метки содержат идентификатор и блок памяти для чтения/записи информации. Данные в них могут быть перезаписаны большое число раз.</li>
 </ul>
-<h4 id="по-исполнению-определяется-целями-и-условиями-использования-rfid-меток">По исполнению (определяется целями и условиями использования RFID-меток):</h4>
+<h5 id="по-исполнению-определяется-целями-и-условиями-использования-rfid-меток">По исполнению (определяется целями и условиями использования RFID-меток)</h5>
 <ul>
 <li>Самоклеющиеся бумажные или лавсановые метки;</li>
 <li>Стандартные пластиковые карты;</li>
